--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,4 @@
 5. Try to make panes sizes dinamically (best option: dragable, another option: set percentage of size in a field)
 6. Download button for the script
 7. create a way to know which window is selected (maybe change colors of fields)
+8. Make it look like a terminal
