--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-1. Make session name required
+1. Make commands a textarea 
 2. Implemente beign able to add a command in the middle of the list with the plus button
 3. Check main card top margin
 4. Implement night mode
